--- a/time-tracking-dashboard-main/index.html
+++ b/time-tracking-dashboard-main/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <div class="wrapper">
+  <main class="wrapper">
     <div class="creator">
       <div class="avatar-section">
         <div class="image">
@@ -30,11 +30,9 @@
         </div>
       </div>
       <div class="timeframe">
-        <ul>
-          <a href="#"><li class="daily active">Daily</li></a>
-          <a href="#"><li class="weekly">Weekly</li></a>
-          <a href="#"><li class="monthly">Monthly</li></a>
-        </ul>
+          <a href="#" class="daily active">Daily</a> 
+          <a href="#" class="weekly">Weekly</a>
+          <a href="#" class="monthly">Monthly</a>
       </div>
     </div>
     <div class="dashboard">
@@ -93,7 +91,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 
 <script src="app.js"></script>
 </body>
