--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
   <header class="header_section">
-    <nav class="hide_menu" id="navbar">
+    <nav id="navbar">
       <div class="nav_section">
         <div class="brandname">
           <img src="./images/logo.svg" alt="">
         </div>
-        <div class="nav_details">
+        <div class="nav_details hide_menu">
           <div class="triangle"></div>
           <a href="#about">About</a>
           <a href="#services">Services</a>
