--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -115,7 +115,9 @@
             <img src="./images/client-maker.svg" alt="" />
           </div>
         </div>
-        <div class="sub__section2"></div>
+        <div class="sub__section2">
+          <div></div>
+        </div>
       </div>
     </main>
     <div class="attribution">
